--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,8 @@
 name: Tests
 
-on:
-  push:
-  schedule:
-    - cron: "29 48 8 * *"
+on: push
+  #schedule:
+    #- cron: "29 48 8 * *"
 
 jobs:
   test:
