--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.py }}
-      - run: python -m pip install crocoddyl tsid
+      - run: python -m pip install crocoddyl tsid ndcurves
       - run: python test.py
