--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: Tests
 
-on: push
-  #schedule:
-    #- cron: "29 48 8 * *"
+on:
+  push:
+  schedule:
+    - cron: "29 4 * * 0,3"
 
 jobs:
   test:
@@ -11,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu", "macos"]
-        py: ["3.8", "3.9", "3.10"]
+        py: ["3.8", "3.10"]
     steps:
       - uses: actions/checkout@v3
 
