--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         os: ["ubuntu", "macos"]
         py: ["3.8", "3.9", "3.10", "3.11"]
+        exclude:
+          - os: "macos"
+            py: "3.8"
     steps:
       - uses: actions/checkout@v3
 
