--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,22 +21,22 @@ jobs:
       - run: python -m pip install -U pip
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-boost
-      - run: cd cmeel-boost && python -m pip wheel -vw ../wh
+      - run: python -m pip wheel -vw wh cmeel-boost
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-eigen
-      - run: cd cmeel-eigen && python -m pip wheel -vw ../wh
-
-      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-assimp
-      - run: cd cmeel-assimp && python -m pip wheel -vw ../wh
-
-      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-octomap
-      - run: cd cmeel-octomap && python -m pip wheel -vw ../wh
-
-      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-qhull
-      - run: cd cmeel-qhull && python -m pip wheel -vw ../wh
+      - run: python -m pip wheel -vw wh cmeel-eigen
 
       - run: git clone --recursive https://github.com/cmake-wheel/eigenpy
-      - run: cd eigenpy && python -m pip wheel -vw ../wh
+      - run: python -m pip wheel -vw wh eigenpy
+
+      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-assimp
+      - run: python -m pip wheel -vw wh cmeel-assimp
+
+      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-octomap
+      - run: python -m pip wheel -vw wh cmeel-octomap
+
+      - run: git clone --recursive https://github.com/cmake-wheel/cmeel-qhull
+      - run: python -m pip wheel -vw wh cmeel-qhull
 
       - run: git clone --recursive https://github.com/cmake-wheel/hpp-fcl
-      - run: cd hpp-fcl && python -m pip wheel -vw ../wh
+      - run: python -m pip wheel -vw wh hpp-fcl
