--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,22 +21,22 @@ jobs:
       - run: python -m pip install -U pip
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-boost
-      - run: python -m pip wheel -vw wh cmeel-boost
+      - run: python -m pip wheel -vw wh ./cmeel-boost
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-eigen
-      - run: python -m pip wheel -vw wh cmeel-eigen
+      - run: python -m pip wheel -vw wh ./cmeel-eigen
 
       - run: git clone --recursive https://github.com/cmake-wheel/eigenpy
-      - run: python -m pip wheel -vw wh eigenpy
+      - run: python -m pip wheel -vw wh ./eigenpy
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-assimp
-      - run: python -m pip wheel -vw wh cmeel-assimp
+      - run: python -m pip wheel -vw wh ./cmeel-assimp
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-octomap
-      - run: python -m pip wheel -vw wh cmeel-octomap
+      - run: python -m pip wheel -vw wh ./cmeel-octomap
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-qhull
-      - run: python -m pip wheel -vw wh cmeel-qhull
+      - run: python -m pip wheel -vw wh ./cmeel-qhull
 
       - run: git clone --recursive https://github.com/cmake-wheel/hpp-fcl
-      - run: python -m pip wheel -vw wh hpp-fcl
+      - run: python -m pip wheel -vw wh ./hpp-fcl
