--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - run: python -m pip install -U pip
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-boost
-      - run: git -C cmeel-boots reset --hard 8ec749c708ff76e47a5c0cadfa83d912a5ce5665  # pre 1.83
+      - run: git -C cmeel-boost reset --hard 8ec749c708ff76e47a5c0cadfa83d912a5ce5665  # pre 1.83
       - run: python -m pip wheel -vw wh ./cmeel-boost
 
       - run: git clone --recursive https://github.com/cmake-wheel/cmeel-eigen
