--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,24 +2,25 @@ name: Tests
 
 on:
   push:
-  schedule:
-    - cron: "29 4 * * 0,3"
 
 jobs:
   test:
     name: "Test ${{ matrix.py }} on ${{ matrix.os }}"
-    runs-on: "${{ matrix.os }}-latest"
+    runs-on: "macos-latest"
     strategy:
       matrix:
-        os: ["ubuntu", "macos"]
+        os: ["ubuntu", "macos-latest", "macos-13"]
         py: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py }}
-      - run: python -m pip install crocoddyl tsid ndcurves
+      - run: python -m pip install -U pip
+      - run: python -m pip install cmeel-boost
+      - run: python -m pip install -i https://testpypi.org/simple eigenpy
       - run: python test.py
         env:
           PYTHONWARNINGS: error
