--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,12 @@
 repos:
-- repo: https://github.com/PyCQA/isort
-  rev: 5.13.2
-  hooks:
-  - id: isort
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.4.3
+  rev: v0.6.9
   hooks:
   - id: ruff
     args:
     - --fix
     - --exit-non-zero-on-fix
+  - id: ruff-format
 - repo: https://github.com/nim65s/pre-commit-sort
   rev: v0.2.0
   hooks:
@@ -18,7 +15,6 @@ repos:
   rev: v0.23.1
   hooks:
   - id: toml-sort-fix
-    exclude: poetry.lock
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.10.0
   hooks:
@@ -41,7 +37,3 @@ repos:
   - id: fix-byte-order-marker
   - id: mixed-line-ending
   - id: trailing-whitespace
-- repo: https://github.com/psf/black
-  rev: 24.4.2
-  hooks:
-  - id: black
