--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,34 +7,23 @@ on:
 
 jobs:
   test:
-    name: "Test ${{ matrix.py }} on ${{ matrix.os }} ${{ matrix.arch }}"
-    runs-on: "${{ matrix.os }}-latest"
+    name: "Test ${{ matrix.python }} ${{ matrix.os }}"
+    runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        arch: ["x86_64", "aarch64", "arm64"]
-        os: ["ubuntu", "macos"]
-        py: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        os: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        python: ["cp38", "cp39", "cp310", "cp311", "cp312", "cp313"]
         exclude:
-          - os: "macos"
-            arch: "x86_64"
-          - os: "macos"
-            arch: "aarch64"
-          - os: "macos"
-            py: "3.8"
-          - os: "ubuntu"
-            arch: "arm64"
+          - os: "macos-14"
+            python: "cp38"
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up QEMU
-        if: matrix.arch == 'aarch64'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
+      - run: echo "${{ matrix.python }}" | sed "s/cp3/PYTHON_VERSION=3./" >> "${GITHUB_ENV}"
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.py }}
-      - run: python -m pip install eigenpy coal-library pin crocoddyl
+          python-version: ${{ env.PYTHON_VERSION }}
+      - run: python -m pip install eigenpy coal-library pin crocoddyl tsid ndcurves
       - run: python test.py
         #env:
           #PYTHONWARNINGS: error
