--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,23 +1,29 @@
 pull_request_rules:
   - name: merge automatically when CI passes and PR is approved
     conditions:
-      - check-success = "Test 3.10 on macos arm64"
-      - check-success = "Test 3.10 on ubuntu aarch64"
-      - check-success = "Test 3.10 on ubuntu x86_64"
-      - check-success = "Test 3.11 on macos arm64"
-      - check-success = "Test 3.11 on ubuntu aarch64"
-      - check-success = "Test 3.11 on ubuntu x86_64"
-      - check-success = "Test 3.12 on macos arm64"
-      - check-success = "Test 3.12 on ubuntu aarch64"
-      - check-success = "Test 3.12 on ubuntu x86_64"
-      - check-success = "Test 3.13 on macos arm64"
-      - check-success = "Test 3.13 on ubuntu aarch64"
-      - check-success = "Test 3.13 on ubuntu x86_64"
-      - check-success = "Test 3.8 on ubuntu aarch64"
-      - check-success = "Test 3.8 on ubuntu x86_64"
-      - check-success = "Test 3.9 on macos arm64"
-      - check-success = "Test 3.9 on ubuntu aarch64"
-      - check-success = "Test 3.9 on ubuntu x86_64"
+      - check-success = "Build cp310 macos-13"
+      - check-success = "Build cp310 macos-14"
+      - check-success = "Build cp310 ubuntu-24.04"
+      - check-success = "Build cp310 ubuntu-24.04-arm"
+      - check-success = "Build cp311 macos-13"
+      - check-success = "Build cp311 macos-14"
+      - check-success = "Build cp311 ubuntu-24.04"
+      - check-success = "Build cp311 ubuntu-24.04-arm"
+      - check-success = "Build cp312 macos-13"
+      - check-success = "Build cp312 macos-14"
+      - check-success = "Build cp312 ubuntu-24.04"
+      - check-success = "Build cp312 ubuntu-24.04-arm"
+      - check-success = "Build cp313 macos-13"
+      - check-success = "Build cp313 macos-14"
+      - check-success = "Build cp313 ubuntu-24.04"
+      - check-success = "Build cp313 ubuntu-24.04-arm"
+      - check-success = "Build cp38 macos-13"
+      - check-success = "Build cp38 ubuntu-24.04"
+      - check-success = "Build cp38 ubuntu-24.04-arm"
+      - check-success = "Build cp39 macos-13"
+      - check-success = "Build cp39 macos-14"
+      - check-success = "Build cp39 ubuntu-24.04"
+      - check-success = "Build cp39 ubuntu-24.04-arm"
       - check-success = "pre-commit.ci - pr"
       - or:
         - approved-reviews-by = nim65s
