--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: uv run test.py
+
+  check:
+    if: always()
+    name: check-macos-linux
+    needs:
+      - test
+    runs-on: Ubuntu-latest
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
