--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,35 +1,12 @@
 pull_request_rules:
-  - name: merge automatically when CI passes and PR is approved
+  - name: merge [bot] PRs when CI pass
     conditions:
-      - check-success = "Test cp310 macos-13"
-      - check-success = "Test cp310 macos-14"
-      - check-success = "Test cp310 ubuntu-24.04"
-      - check-success = "Test cp310 ubuntu-24.04-arm"
-      - check-success = "Test cp311 macos-13"
-      - check-success = "Test cp311 macos-14"
-      - check-success = "Test cp311 ubuntu-24.04"
-      - check-success = "Test cp311 ubuntu-24.04-arm"
-      - check-success = "Test cp312 macos-13"
-      - check-success = "Test cp312 macos-14"
-      - check-success = "Test cp312 ubuntu-24.04"
-      - check-success = "Test cp312 ubuntu-24.04-arm"
-      - check-success = "Test cp313 macos-13"
-      - check-success = "Test cp313 macos-14"
-      - check-success = "Test cp313 ubuntu-24.04"
-      - check-success = "Test cp313 ubuntu-24.04-arm"
-      - check-success = "Test cp38 macos-13"
-      - check-success = "Test cp38 ubuntu-24.04"
-      - check-success = "Test cp38 ubuntu-24.04-arm"
-      - check-success = "Test cp39 macos-13"
-      - check-success = "Test cp39 macos-14"
-      - check-success = "Test cp39 ubuntu-24.04"
-      - check-success = "Test cp39 ubuntu-24.04-arm"
+      - check-success = "check-macos-linux"
       - check-success = "pre-commit.ci - pr"
       - or:
-        - approved-reviews-by = nim65s
-        - author = nim65s
-        - author = dependabot[bot]
-        - author = github-actions[bot]
-        - author = pre-commit-ci[bot]
+          - author = dependabot[bot]
+          - author = github-actions[bot]
+          - author = hrp2-14
+          - author = pre-commit-ci[bot]
     actions:
       merge:
