--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,15 @@
+[build-system]
+requires = ["uv_build>=0.9.5,<0.10.0"]
+build-backend = "uv_build"
+
 [project]
 name = "meta"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+authors = [
+  {name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"}
+]
 requires-python = ">=3.9"
 dependencies = [
   "crocoddyl>=3.1.0",
